src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_unicode_cell_boundaries__ghostty-vt.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
combining: é | wide: 中文 | emoji: 👩‍💻
last-column:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
中
unicode-ready[0m[5;1H
