src/tests/terminal_snapshots/snapshots/terminal_snapshots__terminal_snapshots__terminai_unicode_cell_boundaries__internal.snap
---
source: src/tests/terminal_snapshots/support.rs
expression: snapshot
---
combining:[Cé[C|[Cwide:[C中文[C|[Cemoji:[C👩‍💻[m
last-column:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx[m
中[m
unicode-ready[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
[m
